--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -134,6 +134,7 @@
         android:id="@+id/tw_HW"
         android:layout_width="wrap_content"
         android:layout_height="19dp"
+        android:layout_marginTop="8dp"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:onClick="onClick_twHW"
