--- a/app/src/main/res/drawable/button_change_color.xml
+++ b/app/src/main/res/drawable/button_change_color.xml
@@ -7,7 +7,12 @@
             <corners android:radius="50dp"/>
         </shape>
     </item>
-
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/Pressed"/>
+            <corners android:radius="50dp"/>
+        </shape>
+    </item>
 
 
 </selector>
